# custom-iiif-manifests

./: README.md  pyproject.toml
collections/: book-arts.json  cole-htr-reason.json  cole-text-only-v2.json  cole-text-only.json  collections.json  literature-collections.json  maps.json  mcinnis-not-processed.json  mcinnis-reasoning.json  newspapers.json  oral-histories.json  service-maps.json
collections/oral-histories/: chicano.json  dwg.json  scifiradio.json  veterans.json
custom_iiif_manifests/: cole.py  generate.py
manifests/: cole-papers-4.json  edge-grant-sample.json  kleberg-annotated.json  mcinnis-13.json  mcinnis-134.json  mcinnis-301.json  mcinnis-351.json  mcinnis-39-v3-htr.json  mcinnis_122.json  mcinnis_39.json  ted-franklin.json
manifests/cattle-brands/: hidalgo.json  hill.json  hockley.json  hood.json  hopkins.json  houston.json  howard.json  hudspeth.json  hunt.json  hutchinson.json  irion.json  jack.json  jackson.json  jasper.json  jeffdavis.json  jefferson.json  jimhogg.json  jimwells.json
manifests/cole-htr/: 10.json  12.json  14.json  15.json  16.json  17.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  4.json
manifests/cole-htr-reason/: 14.json  15.json  23.json  27.json
manifests/dwg/: hamel.json
manifests/dwg-test/: glatt-test.json
manifests/gray-diary/: gray-v3.json  gray.json  graydiary-search.json  graydiary.json
manifests/mcinnis/: mcinnis-10.json  mcinnis-101.json  mcinnis-102.json  (+211 more)
vtts/: 02_00016-a_01.vtt  02_00016-a_02.vtt  02_00016-b_01.vtt  02_00016-b_02.vtt  02_00016-c_01.vtt  02_00078-a_01.vtt
(+146 files in other folders)
